-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.3, 6.4
-
None
-
-
6f1bacdd10 (qt/qtwayland/dev) 13a6e935d5 (qt/qtwayland/6.3) 13a6e935d5 (qt/tqtc-qtwayland/6.3) 6f1bacdd10 (qt/tqtc-qtwayland/dev) 13a6e935d5 (qt/qtwayland/6.3.1) 13a6e935d5 (qt/tqtc-qtwayland/6.3.1) ba3f8c48bf (qt/tqtc-qtwayland/6.2)
A developer-build of Qt in webOS environment revealed these two warnings which were treated as errors.
| /home/janne/workdir/webOS/build-webos/BUILD/work/qemux86_64-webos-linux/qtwayland/6.3.1-r0/git/src/client/qwaylanddatasource.cpp:96:14: error: ignoring return value of 'ssize_t write(int, const void*, size_t)', declared with attribute warn_unused_result [-Werror=unused-result] | 96 | write(fd, content.constData(), content.size()); | | ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | cc1plus: all warnings being treated as errors | /home/janne/workdir/webOS/build-webos/BUILD/work/qemux86_64-webos-linux/qtwayland/6.3.1-r0/git/src/client/qwaylandprimaryselectionv1.cpp: In member function 'virtual void QtWaylandClient::QWaylandPrimarySelectionSourceV1::zwp_primary_selection_source_v1_send(const QString&, int32_t)': | /home/janne/workdir/webOS/build-webos/BUILD/work/qemux86_64-webos-linux/qtwayland/6.3.1-r0/git/src/client/qwaylandprimaryselectionv1.cpp:163:14: error: ignoring return value of 'ssize_t write(int, const void*, size_t)', declared with attribute warn_unused_result [-Werror=unused-result] | 163 | write(fd, content.constData(), size_t(content.size())); | | ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | cc1plus: all warnings being treated as errors
For Gerrit Dashboard: QTBUG-103378 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
410707,2 | client: Mark return values as unused to suppress compiler warnings | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
410718,2 | client: Mark return values as unused to suppress compiler warnings | 6.3 | qt/qtwayland | Status: MERGED | +2 | 0 |
444775,3 | client: Mark return values as unused to suppress compiler warnings | tqtc/lts-6.2 | qt/tqtc-qtwayland | Status: MERGED | +2 | 0 |
444776,2 | client: Mark return values as unused to suppress compiler warnings | tqtc/lts-5.15 | qt/tqtc-qtwayland | Status: MERGED | +2 | 0 |