client: Mark return values as unused to suppress compiler warnings

Return values of two write() functions were ignored, causing warnings
which were treated as errors on webOS emulator build.

Fixes: QTBUG-103378
Change-Id: Ifc2e944dee376973b69220b7f75dc346c0a71e71
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit 6f1bacdd10562ffb1eed51ea3bb8993df3e23896)
Reviewed-by: Janne Juntunen <janne.juntunen@qt.io>